--- a/content/index.yml
+++ b/content/index.yml
@@ -2,4 +2,4 @@ layout: layout.html
 brand: maml
 title: Welcome
 title_suffix: " | maml static website generator"
-menu: [ /download/, /blog/ ]
+navbar_items: [ /download/, /blog/ ]
