--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "default maml template",
   "dependencies": {
-    "maml": "^0.1.0",
-    "markdown-core": "^0.4.8"
+    "maml": "^0.1.0"
   },
   "keywords": [
     "maml-template",
