--- a/models/index.yml
+++ b/models/index.yml
@@ -5,4 +5,4 @@ view: index
 brand: maml
 title: Welcome
 title_suffix: " | maml static website generator"
-navbar_items: [ /download/, /blog/ ]
+navbar_items: [ /download/, /documentation/ ]
