--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "maml-template-default",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "default maml template",
   "scripts": {
-    "upgrade": "yarn-upgrade-all"
+    "upgrade": "yarn-upgrade-all",
+    "build": "maml build -o dist"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "maml": "^0.2.0",
-    "markdown-it": "^8.4.0"
+    "markdown-core": "^1.2.1"
   },
   "keywords": [
     "maml-template",
